[package]
authors = ["Baptiste Darthenay <baptiste.darthenay@gmail.com>"]
categories = ["parser-implementations"]
description = "Python PIP requirements.txt parser"
edition = "2018"
keywords = ["python", "pip", "requirements"]
license = "MIT"
name = "requirements"
readme = "README.md"
repository = "https://github.com/batisteo/requirements"
version = "0.4.0"

[[bin]]
name = "parsereqs"
path = "./src/bin/parsereqs.rs"

[lib]
name = "requirements"
path = "./src/lib.rs"

[dependencies]
globwalk = "^0.7"
logos = "^0.12"
pest = "^2"
pest_derive = "^2"
regex = "^1"
walkdir = "^2"
